# yaaf

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  exchange_b.cpp  pingpong_b.cpp
cmake/: CompillerSettings.cmake
examples/: CMakeLists.txt  network_example.cpp  ping_pong_example.cpp
libnmq/: CMakeLists.txt  abstract_context.cpp  abstract_context.h  actor.cpp  actor.h  actor_settings.cpp  actor_settings.h  async_result.h  chanel.h  client.cpp  client.h  config.h  context.cpp  context.h  envelope.cpp  envelope.h  errors.h  kinds.h  mailbox.cpp  mailbox.h  network_message.cpp  network_message.h  nmq.h  payload.h  queries.cpp  queries.h  serialisation.cpp  serialisation.h  server.cpp  server.h  types.h  users.cpp  users.h
libnmq/local/: l_transport.h  queue.h
libnmq/lockfree/: l_transport.h  queue.h  transport.h
libnmq/network/: abstract_client.cpp  abstract_client.h  abstract_server.cpp  abstract_server.h  async_io.cpp  async_io.h  connection.cpp  connection.h  kinds.h  listener.cpp  listener.h  listener_client.cpp  listener_client.h  message.cpp  message.h  net_transport.h  queries.cpp  queries.h  socket_ptr.h  transport.h
libnmq/serialization/: helpers.h  serialization.cpp  serialization.h
libnmq/utils/: exception.h  initialized_resource.cpp  initialized_resource.h  logger.cpp  logger.h  strings.cpp  strings.h  utils.cpp  utils.h
libnmq/utils/async/: locker.cpp  locker.h  task.cpp  task.h  thread_manager.cpp  thread_manager.h  thread_pool.cpp  thread_pool.h
libyaaf/: .gitignore  CMakeLists.txt  abstract_context.cpp  abstract_context.h  actor.cpp  actor.h  actor_address.h  actor_settings.cpp  actor_settings.h  config.h  context.cpp  context.h  context_network.cpp  context_network.h  envelope.cpp  envelope.h  errors.h  mailbox.cpp  mailbox.h  network_actors.cpp  network_actors.h  nmq.h  payload.h  types.h
libyaaf/network/: async_io.cpp  async_io.h  connection.cpp  connection.h  dialler.cpp  dialler.h  initialized_resource.h  kinds.h  listener.cpp  listener.h  listener_client.cpp  listener_client.h  message.cpp  message.h  queries.cpp  queries.h
libyaaf/serialization/: helpers.h  serialization.cpp  serialization.h
libyaaf/utils/: exception.h  initialized_resource.cpp  initialized_resource.h  logger.cpp  logger.h  strings.cpp  strings.h  utils.cpp  utils.h
libyaaf/utils/async/: locker.cpp  locker.h  task.cpp  task.h  thread_manager.cpp  thread_manager.h  thread_pool.cpp  thread_pool.h
microbenchmarks/: CMakeLists.txt  actor_b.cpp  common.cpp  common.h  context_b.cpp  local_b.cpp  lockfree.cpp  lockfree_b.cpp  mailbox_b.cpp  main.cpp  network.cpp  network_b.cpp  serialisation.cpp  serialisation_b.cpp  threads_b.cpp  transport.cpp  transport_b.cpp
unittests/: CMakeLists.txt  actor_test.cpp  context_test.cpp  helpers.h  listener_test.cpp  local_test.cpp  lockfree_test.cpp  mailbox_test.cpp  main.cpp  network_test.cpp  payload_test.cpp  serialisation_test.cpp  server_client_test.cpp  transport_test.cpp  types_test.cpp  utils_test.cpp
